--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
-    "recharts": "^2.7.3"
+    "recharts": "^2.7.3",
+    "tailwindcss-scrollbar": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
