--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@tanstack/react-table": "^8.9.9",
     "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
