--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.10",
     "@tanstack/react-table": "^8.9.9",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
