--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@tanstack/react-table": "^8.9.9",
+    "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
