--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,9 @@
     "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "moment": "^2.29.4",
     "mui-datatables": "^4.3.0",
-    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
